# Engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  config.h.in
Editor/: Editor.cpp  Editor.hpp  main.cpp
Editor/Window/: AssetsWindow.cpp  EntitiesWindow.cpp  InspectorWindow.cpp
Engine/: API.hpp  CMakeLists.txt  Config.h.in  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  Global.cpp  Global.hpp  Scene.cpp  Scene.hpp
Engine/Assets/meshes/: cone.fbx  cube.fbx  cylinder.fbx  sphere.fbx
Engine/Assets/shaders/: quad.frag  quad.vert
Engine/Assets/shaders/mesh/: diffuse.frag  diffuse.vert
Engine/Assets/shaders/starrail/: character.fs  character.vs
Engine/Assets/shaders/visutils/: line.frag  line.vert
Engine/Assets/shaders/zzz/: character_beta.fs  character_beta.vs
Engine/Base/: BaseComponent.hpp  BaseSystem.hpp  ComponentList.hpp  Library.cpp  Scriptable.hpp  Types.hpp
Engine/Component/: Animator.cpp  Animator.hpp  Camera.cpp  Camera.hpp  DeformMeshRenderer.hpp  DeformRenderer.cpp  DeformRenderer.hpp  Library.cpp  Light.cpp  Light.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshRenderer.cpp  MeshRenderer.hpp  NativeScript.cpp  NativeScript.hpp  Scriptable.hpp
Engine/Component/Phy/: Collider.cpp  Collider.hpp  RigidBody.cpp  RigidBody.hpp
Engine/Function/: AssetsLoader.cpp  AssetsLoader.hpp  AssetsType.hpp  HardCodeAssets.hpp  ShaderCode.hpp
Engine/Function/Animation/: Deform.cpp  Deform.hpp  Edit.cpp  Edit.hpp  Metrics.cpp  Metrics.hpp  Motion.cpp  Motion.hpp
Engine/Function/Animation/Tools/: make_blend_shapes.py  motion_builder_retargeting.py
Engine/Function/GUI/: Helpers.cpp  Helpers.hpp
Engine/Function/General/: ComputeShader.hpp  Deformers.cpp  Deformers.hpp  KDTree.cpp  KDTree.hpp  Utils.hpp
Engine/Function/Geometry/: Mesh.cpp  Mesh.hpp
Engine/Function/Loader/: FBX.cpp
Engine/Function/Math/: Dampers.cpp  Dampers.hpp  Math.cpp  Math.hpp
Engine/Function/Render/: Buffers.hpp  FrameBuffer.cpp  FrameBuffer.hpp  MaterailData.cpp  MaterialData.hpp  Mesh.cpp  Mesh.hpp  RenderPass.cpp  RenderPass.hpp  Shader.cpp  Shader.hpp  Tools.cpp  Tools.hpp  VisUtils.cpp  VisUtils.hpp
Engine/Function/Render/Passes/: Basic.cpp  FieldVisualize.cpp  GBVMain.cpp  Header.hpp  Mihoyo.cpp  Mihoyo.hpp  Outline.cpp  PBR.cpp  Wireframe.cpp  ZenlessZoneZero.cpp  ZenlessZoneZero.hpp
Engine/Function/Spatial/: BVH.cpp  BVH.hpp  Library.cpp  Library.hpp  Types.cpp  Types.hpp
Engine/NN/: Retargeting.cpp  Retargeting.hpp
Engine/Scripts/: CameraController.hpp  SelfIntersection.cpp  SelfIntersection.hpp  TestDebugDraw.hpp
Engine/Scripts/Animation/: MotionMatching.cpp  MotionMatching.hpp  SAMERetarget.cpp  SAMERetarget.hpp  VisMetrics.cpp  VisMetrics.hpp
Engine/Scripts/Animation/IK/: TwoBoneIK.cpp  TwoBoneIK.hpp
Engine/Scripts/Animation/archieve/: same_handles.py  same_server.py
Engine/Scripts/Geometry/: PolygonMeshProcessing.cpp  PolygonMeshProcessing.hpp  SelfIntersection.cpp
Engine/System/Animation/: AnimationSystem.cpp  AnimationSystem.hpp  Common.cpp  Common.hpp
Engine/System/Audio/: AudioSystem.cpp  AudioSystem.hpp
Engine/System/Camera/: CameraSystem.cpp  CameraSystem.hpp
Engine/System/NativeScript/: NativeScriptSystem.cpp  NativeScriptSystem.hpp
Engine/System/Physics/: CollisionSystem.cpp  CollisionSystem.hpp  RigidDynamics.cpp  RigidDynamics.hpp
Engine/System/Render/: CameraSystem.cpp  CameraSystem.hpp  FrameBuffer.cpp  FrameBuffer.hpp  LightSystem.cpp  LightSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
Engine/System/Spatial/: SpatialSystem.cpp  SpatialSystem.hpp
Engine/Utils/: AssetsLoader.cpp  AssetsLoader.hpp  AssetsType.hpp  Reflection.hpp
Engine/Utils/Animation/: Metrics.cpp  Metrics.hpp  Motion.cpp  Motion.hpp
Engine/Utils/General/: ComputeShader.hpp
Engine/Utils/Geometry/: Mesh.cpp  Mesh.hpp
Engine/Utils/Math/: Math.cpp
Engine/Utils/Render/: Buffers.hpp  Deformable.hpp  DeformableMesh.hpp  MaterailData.cpp  MaterialData.hpp  Mesh.hpp  Shader.hpp  VisUtils.cpp  VisUtils.hpp
Engine/cmake/: AssimpConfig.cmake  FetchASIO.cmake  FetchLibigl.cmake  FindFBX.cmake  FindONNXRuntime.cmake  GLSLangConfig.cmake
Tests/: CMakeLists.txt
Tests/Datastructure/: kdtree.cpp
Tests/Processing/: formalize_lafan.cpp
assets/: 1.scene  2.scene
ext/glad/src/: glad.c
ext/imgui/: CMakeLists.txt  roboto.h
ext/imguifd/: CMakeLists.txt
ext/imguizmo/: CMakeLists.txt
ext/json11/: CMakeLists.txt
src/: basics.hpp  global.hpp  main.cpp
src/default/shaders/: base.frag  base.vert  error.vert  pbr.vert
src/ecs/: ecs.hpp
src/ecs/base/: BaseComponent.hpp  BaseSystem.hpp  ComponentList.hpp  EntityManager.hpp  Library.cpp  Types.cpp  Types.hpp  base_component.hpp  base_system.hpp  component_list.hpp  entity.hpp  entity_manager.hpp  types.hpp
src/ecs/components/: Camera.hpp  Lights.hpp  Material.hpp  MeshRenderer.hpp  Transform.cpp  Transform.hpp
src/ecs/systems/camera/: CameraSystem.hpp
src/ecs/systems/gui/: GuiSystem.cpp  GuiSystem.hpp
src/ecs/systems/hierarchy/: HierarchySystem.hpp
src/ecs/systems/light/: LightSystem.hpp
src/ecs/systems/render/: EditorWindows.cpp  EditorWindows.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Mesh.hpp  MeshRendererSystem.hpp  READMD.md  README.md  RenderSystem.hpp
src/engine/: Console.cpp  Console.hpp  EditorWindows.cpp  EditorWindows.hpp  Engine.cpp  Engine.hpp  Events.cpp  Events.hpp  Timer.cpp  Timer.hpp  engine.cpp  engine.hpp  events.cpp  events.hpp  timer.cpp  timer.hpp
src/engine/editor/: AssetsWindow.cpp  EntitiesWindow.cpp  InspectorWindow.cpp
src/object/: Mesh.hpp  Shader.hpp
src/resource/: BVHMotion.hpp  MaterialData.cpp  MaterialData.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceTypes.hpp  Shader.hpp
src/resource/animation/: Motion.cpp  Motion.hpp
src/resource/geometry/: Mesh.hpp
src/shaders/default/: base.frag  base.vert  error.frag  error.vert  pbr.frag  pbr.vert
src/test/: CMakeLists.txt  test_motion.cpp  test_reflection.cpp
src/test/geometry/: test_mesh.cpp
src/test/reflection/: test1.json
src/utils/: Math.cpp  Math.hpp  Reflection.hpp
(+3 files in other folders)
